--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         v-bind:style="{ 
           border: 'solid 1px',
           width: value + '%',
-          margin: '3px'
+          margin: '3px',
+          padding: '3px'
         }"
         v-bind:key="value.key">
       </array-item>
